# Auditly

./: .gitignore  docker-compose.yml
Backend/: .gitignore  docker-compose.yml  main.py  pyproject.toml  schema.sql  services.py  storage.py
Backend/RabbitMQ/: relay-worker.js  topology.py
Backend/agent/: consumer.py  graph.py  llm_client.py  prompts.py  publish_test.py  state.py
Backend/agent/nodes/: map_generator.py  pdf_parser.py  validator.py
Backend/api/: audit.py  auth.py  dashboard.py  departments.py  deps.py  head.py  internal.py  maps.py  materialize.py  onboarding.py  org.py  regulations.py  ws.py
Backend/db/: mongo.py  postgres.py
frontend/: package-lock.json  package.json  proxy.ts
frontend/app/: globals.css  layout.tsx
frontend/app/_components/: AnimatedCounter.tsx  PageTransition.tsx  ProfileMenu.tsx  ProfileModal.tsx  RealtimeNotifier.tsx  StaggerList.tsx
frontend/app/dashboard/: layout.tsx  page.tsx
frontend/app/dashboard/_components/: AnimatedDashboard.tsx  HeaderActions.tsx  PriorityActions.tsx  Sidebar.tsx
frontend/app/dashboard/audit-trail/: page.tsx
frontend/app/dashboard/departments/: page.tsx
frontend/app/dashboard/maps/: page.tsx
frontend/app/dashboard/regulations/: page.tsx
frontend/app/dashboard/settings/: page.tsx
frontend/app/head/: layout.tsx
frontend/app/onboarding/: layout.tsx  page.tsx
frontend/app/profile/: page.tsx
frontend/lib/: auth-client.tsx  auth-server.ts  gsap.ts  labels.ts
ingestion/: Dockerfile  db.py  outbox-schema.sql  relay.py  requirements.txt  scraper.py  topology.py
(+22 files in other folders)
