[project]
name = "backend"
version = "0.1.0"
description = "Auditly backend — FastAPI + custom JWT auth"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "fastapi[standard]>=0.136.3",
    "PyJWT>=2.9.0",
    "bcrypt>=4.1.0",
    "email-validator>=2.1.0",
    "cryptography>=42.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "pika>=1.3.0",
    "langgraph>=1.2.4",
    "langchain-ollama>=0.2.0",
    "markitdown[pdf]>=0.1.6",
    "asyncpg>=0.29.0",
    "pymongo>=4.9.0",
    "fpdf2>=2.8.0",
]
